--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,11 @@
     "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-dropzone": "^10.1.3",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "superagent": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
