--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nyt-react",
+  "name": "caribbean-sailing-vacations",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -24,8 +24,6 @@
     "cloudinary": "^1.14.0",
     "express": "^4.15.4",
     "if-env": "^1.0.4",
-    "mongoose": "^5.0.17",
-    "multer": "^1.4.1",
-    "multer-storage-cloudinary": "^2.2.1"
+    "mongoose": "^5.0.17"
   }
 }
