--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,10 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.3",
-    "react-router": "^5.0.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "styled-components": "^3.4.9",
     "superagent": "^5.0.2"
   },
   "scripts": {
