--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
+  "engines": {
+    "node": "^11.8",
+    "yarn": "^1.15.2"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.8.6",
@@ -11,8 +15,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "styled-components": "^3.4.9",
-    "superagent": "^5.0.2"
+    "styled-components": "^3.4.9"
   },
   "scripts": {
     "start": "react-scripts start",
