--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "install": "cd client && yarn install;",
+    "install": "cd client && npm install;",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
+  },
+  "engines": {
+    "node": "^11.8",
+    "npm": "6.8.0"
   },
   "author": "",
   "license": "ISC",
