--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "proxy": "http://localhost:3001/",
   "engines": {
     "node": "^11.8",
-    "yarn": "^1.15.2"
+    "yarn": "1.x"
   },
   "dependencies": {
     "axios": "^0.18.0",
