--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "heroku-postbuild": "npm run build"
   },
   "engines": {
-    "node": "^11.8",
-    "npm": "6.8.0"
+    "node": "^11.x",
+    "npm": "^6.x"
   },
   "author": "",
   "license": "ISC",
