--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "engines": {
-    "node": "^11.8",
+    "node": "^11.x",
     "yarn": "1.x"
   },
   "dependencies": {
@@ -15,7 +15,8 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "styled-components": "^3.4.9"
+    "styled-components": "^3.4.9",
+    "superagent": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
