--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "caribbean-sailing-vacations",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "start:prod": "node server.js",
+    "start": "node index.js",
+    "start:prod": "node index.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
     "install": "cd client && yarn install;",
