--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cloudinary": "^1.14.0",
     "express": "^4.15.4",
     "if-env": "^1.0.4",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^5.0.17",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
