--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-stripe-checkout": "^2.6.3",
     "styled-components": "^3.4.9",
     "superagent": "^5.0.2"
   },
