--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "local-storage": "^2.0.0",
+    "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.3",
@@ -17,6 +18,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-stripe-checkout": "^2.6.3",
+    "react-transition-group": "^4.0.1",
     "styled-components": "^3.4.9",
     "superagent": "^5.0.2"
   },
