--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "heroku-postbuild": "npm run build"
   },
   "engines": {
-    "node": "^11.x",
+    "node": "^10.x",
     "npm": "^6.x",
     "yarn": "1.x"
   },
@@ -24,12 +24,13 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "axios": "^0.16.2",
+    "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "cloudinary": "^1.14.0",
+    "create-react-app": "^3.0.1",
     "express": "^4.15.4",
     "if-env": "^1.0.4",
     "jwt-simple": "^0.5.6",
@@ -38,6 +39,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "react-notify-toast": "^0.5.0",
     "sendgrid": "^5.2.3"
   }
 }
